# den_snv

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/den_snv/: __init__.py  sinave_etvs.py
tests/: test_den_snv.py
